Bug 149498 - CRASH: undoing paste
Summary: CRASH: undoing paste
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2022-06-09 07:36 UTC by Xisco Faulí
Modified: 2023-07-25 11:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["SwHistoryBookmark::SetInDoc(SwDoc *,bool)"]


Attachments
sample file (13.09 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-06-09 07:36 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-06-09 07:36:16 UTC
Created attachment 180646 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Select all
3. Copy
4. Paste
5. Undo

-> Crash

Reproduced in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: d4123356c61db269651e950a0a2cc93e6d801c90
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-06-09 07:37:13 UTC
Regression introduced by:

author	László Németh <nemeth@numbertext.org>	2021-12-02 17:45:46 +0100
committer	László Németh <nemeth@numbertext.org>	2021-12-03 13:10:57 +0100
commit 9e1e88ad5cf2dc0e9b188c60930445652a6c7519 (patch)
tree 13a4fc3c4fdb1ee9283d218495e2c53edf6eeb27
parent 7563216425c1a43166db083d809073b268f7884f (diff)
tdf#145720 DOCX export: fix loss of tracked moving

Bisected with: bibisect-linux64-7.4

Adding Cc: to László Németh
Comment 2 Xisco Faulí 2023-03-09 12:00:59 UTC
Hi László, this issue is still reproducible in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c1af1b9c555480305862336954ceefe14865e27d
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-07-21 23:15:11 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/818f8f13128ba78769b4f542ed1efef658de38d9

tdf#149498 sw: fix Undo crash at bookmark over cells

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 László Németh 2023-07-24 09:28:26 UTC
Note: there was also an assert in the debug builds, and it is still there, so for manual testing, use a non-debug build to check the fix:

soffice.bin: /home/laci/libreoffice/sw/source/core/bastyp/index.cxx:234: virtual SwContentIndexReg::~SwContentIndexReg(): Assertion `!m_pFirst && !m_pLast && "There are still indices registered"' failed.
Unspecified Application Error
Comment 5 Commit Notification 2023-07-24 10:02:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/3ec09683bcbf85e42940108fa2ec0c49ad7d3d8b

tdf#149498 sw: fix Undo crash at bookmark over cells

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2023-07-25 11:07:39 UTC
Verified in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 42f0422d19c4d0a2fb09654fb6d1d92e50f6dd5c
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded